# c3a

./: .gitignore  Cargo.toml  Dockerfile  README.md  compose.yaml  deploy-config.json  deploy-config.yaml
.depl/: config.yaml
c3a-client/: Cargo.toml
c3a-client/src/: lib.rs
c3a-common/: Cargo.toml  deploy-config.yaml
c3a-common/src/: lib.rs  types.rs  utils.rs
c3a-common/src/types/: apps.rs  users.rs
c3a-common/src/types/users/: email.rs  first_factor.rs  ids.rs
c3a-frontend/: Cargo.toml  Dioxus.toml  deploy-config.json  deploy-config.yaml  index.html  port_patch.json  tailwind.config.js
c3a-frontend/locales/: en.json  ru.json
c3a-frontend/public/: tailwind.css
c3a-frontend/src/: info.rs  main.rs  sign_in.rs  sign_up.rs
c3a-frontend/src/components/: mod.rs
c3a-worker/: .env.example  Cargo.toml  DESIGN.md  c3a-worker.yaml  deploy-config.json  deploy-config.yaml
c3a-worker/src/: application_server_api.rs  auth.rs  kv.rs  mailer.rs  main.rs  services.rs  utils.rs
c3a-worker/src/api/: applications.rs  mod.rs  users.rs
c3a-worker/src/core/: mod.rs  user_preregistration_inspects.rs  user_registration_checks.rs
c3a-worker/src/utils/: generators.rs  hashes.rs
