[workspace]
members = [
  "c3a-client",
  "c3a-common",
  "c3a-frontend",
  "c3a-worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[workspace.dependencies]
c3a-common = { path = "c3a-common", default-features = false }

base64 = "0.22"
cc-server-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.9", default-features = false }
cc-static-server = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.9" }
cc-utils = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.9", default-features = false }
cc-ui-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.9" }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
fjall = "2.6.5"
leptos = { version = "0.7", default-features = false }
leptos_i18n = { version = "0.5", default-features = false }
leptos_meta = "0.7"
leptos_router = "0.7"
pqc_dilithium = { git = "https://github.com/markcda/pqc_dilithium.git", features = ["mode5"] }
rand = "0.8.5"
rand_chacha = "0.3"
regex = "1.11"
rmp-serde = "1.3"
salvo = { version = "0.77", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
thiserror = "2.0"
tokio = { version = "1", default-features = false }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
