[workspace]
members = [
  "c3a-client",
  "c3a-common",
  "c3a-frontend",
  "c3a-worker",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[workspace.dependencies]
c3a-common = { path = "c3a-common", default-features = false }

base64 = "0.22"
cc-server-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10", default-features = false }
cc-static-server = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10" }
cc-utils = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10", default-features = false }
cc-ui-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10" }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
dotenv = "0.15"
fjall = "2.6.5"
hex = "0.4"
leptos = { version = "0.7", default-features = false }
leptos_i18n = { version = "0.5", default-features = false }
leptos_meta = "0.7"
leptos_router = "0.7"
pqc_dilithium = { git = "https://github.com/markcda/pqc_dilithium.git", features = ["mode5"] }
rand = "0.9"
rand_chacha = "0.9"
regex = "1.11"
rmp-serde = "1.3"
salvo = { version = "0.77", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
sha3 = "0.10"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
totp-rs = { version = "5.6.0", default-features = false }
u2f = { git = "https://github.com/markcda/u2f-rs.git", tag = "0.2.7", default-features = false }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
