[workspace]
members = [
  "c3a-client",
  "c3a-common",
  "c3a-frontend",
  "c3a-worker",
  "3rd-party/dilithium",
  "3rd-party/totp-rs",
  "3rd-party/u2f-rs",
  "3rd-party/u2f-rs/example",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[workspace.dependencies]
c3a-common = { path = "c3a-common", default-features = false }

pqc_dilithium = { path = "3rd-party/dilithium", features = ["mode5"] }
totp-rs = { path = "3rd-party/totp-rs", default-features = false }
u2f = { path = "3rd-party/u2f-rs", default-features = false }

base32 = "0.4"
base64 = "0.22"
byteorder = "1.3"
bytes = "0.4"
cc-server-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10", default-features = false }
cc-static-server = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10" }
cc-utils = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10", default-features = false }
cc-ui-kit = { git = "https://github.com/impulse-sw/cc-services.git", tag = "0.5.10" }
chacha20poly1305 = "0.10"
chrono = { version = "0.4", features = ["serde"] }
constant_time_eq = "0.2"
dotenv = "0.15"
fjall = "2.6.5"
getrandom = { version = "0.3", default-features = false }
hex = "0.4"
hmac = "0.12"
leptos = { version = "0.7", default-features = false }
leptos_i18n = { version = "0.5", default-features = false }
leptos_meta = "0.7"
leptos_router = "0.7"
qrcodegen-image = { version = "1.4", features = ["base64"] }
rand = "0.9"
rand_chacha = "0.9"
regex = "1.11"
ring = "0.17"
rmp-serde = "1.3"
salvo = { version = "0.77", default-features = false }
serde = { version = "1", default-features = false }
serde_json = "1"
sha1 = "0.10"
sha2 = "0.10"
sha3 = "0.10"
thiserror = "2.0"
tokio = { version = "1", default-features = false }
untrusted = "0.7"
url = "2.4"
urlencoding = "2.1"
webpki = "0.22"
zeroize = { version = "1.6", features = ["alloc", "derive"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
