[package]
name = "c3a-frontend"
version = "0.1.0"
edition = "2021"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[dependencies]
cc-utils = { git = "https://github.com/markcda/cc-utils.git", default-features = false, features = ["reqwest", "web-sys", "web-ws"] }
cc-ui-kit = { git = "https://github.com/markcda/cc-ui-kit.git" }
console_error_panic_hook = "0.1.7"
console_log = "1"
dioxus = "0.4"
log = "0.4"
web-sys = { version = "0.3", features = ["Storage", "Window", "Navigator"] }

[profile.release]
opt-level = "z"
debug = false
lto = true
codegen-units = 1
panic = "abort"
strip = true
incremental = false
