[package]
name = "c3a-frontend"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
c3a-common = { workspace = true, features = ["app-client-types", "pqc-utils"] }
cc-utils = { workspace = true, features = ["reqwest"] }
cc-ui-kit = { workspace = true }
leptos = { workspace = true, features = ["csr"] }
leptos_i18n = { workspace = true, features = ["csr", "json_files"] }
leptos_meta = { workspace = true }

[package.metadata.leptos-i18n]
default = "en"
locales = ["en", "ru"]
