[package]
name = "c3a-worker"
version = "0.1.0"
edition = "2024"
authors = ["Klimenty Titov <aclo.create@gmail.com>"]

[dependencies]
c3a-common = { path = "../c3a-common", default-features = false, features = ["c3a-worker-types", "pqc-utils"] }
cc-server-kit = { git = "https://github.com/markcda/cc-server-kit.git", tag = "0.3.5", default-features = false, features = [
  "oapi",
  "cc-utils",
  "otel",
  "test",
] }
cc-static-server = { git = "https://github.com/markcda/cc-static-server.git", tag = "0.2.8" }
fjall = "2.6.5"
rmp-serde = "1.3"
salvo = { version = "0.76.2", default-features = false, features = ["test"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1" }
