[package]
name = "c3a-worker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
c3a-common = { workspace = true, features = ["c3a-worker-types", "pqc-utils"] }
cc-server-kit = { workspace = true, features = ["oapi", "cc-utils", "otel", "test"] }
cc-static-server = { workspace = true }
dotenv = { workspace = true }
fjall = { workspace = true }
rmp-serde = { workspace = true }
salvo = { workspace = true, features = ["test"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
