[package]
name = "c3a-worker"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }

[dependencies]
argon2 = { workspace = true, features = ["std", "password-hash", "rand"] }
c3a-common = { workspace = true, features = ["c3a-worker-types", "pqc-utils", "crypt-utils"] }
cc-server-kit = { workspace = true, features = ["oapi", "cc-utils", "otel", "test"] }
cc-static-server = { workspace = true }
chrono = { workspace = true }
dotenv = { workspace = true }
fjall = { workspace = true }
hex = { workspace = true }
lettre = { workspace = true, features = ["builder", "hostname", "pool", "smtp-transport", "tokio1-rustls-tls"] }
passwords = { workspace = true }
rand = { workspace = true, features = ["std_rng"] }
rmp-serde = { workspace = true }
salvo = { workspace = true, features = ["test"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha3 = { workspace = true }
tokio = { workspace = true, features = ["macros"] }
totp-rs = { workspace = true }
u2f = { workspace = true, features = ["rand"] }
